--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/sannajammeh/make-it-responsive#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "parcel-bundler": "^1.12.4"
   }
 }
