--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sannajammeh/make-it-responsive#readme",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-parameters": "^7.10.5",
     "parcel-bundler": "^1.12.4"
   }
 }
