--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-transform-parameters": "^7.10.5",
+    "babel-plugin-polyfill-corejs3": "0.0.6",
     "parcel-bundler": "^1.12.4"
   }
 }
