--- a/.babelrc
+++ b/.babelrc
@@ -3,12 +3,12 @@
     [
       "@babel/preset-env",
       {
-        "debug": true,
+        "useBuiltIns": "usage",
+        "corejs": { "version": 3, "proposals": true },
         "targets": {
-          "ie": "11"
+          "ie": 11
         }
       }
     ]
-  ],
-  "plugins": [["polyfill-corejs3", { "method": "usage-global" }]]
+  ]
 }
