--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-transform-parameters": "^7.10.5",
     "@babel/polyfill": "^7.11.5",
     "babel-plugin-polyfill-corejs3": "0.0.6",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^4.0.3"
   }
 }
